--- a/latihan1.html
+++ b/latihan1.html
@@ -6,22 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mencoba membuat halaman web html dan style css</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+
+        }
+
+        body {
+            font-family: 'Lato', sans-serif;
+        }
+
+        section::after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Belajar HTML dan CSS</h1>
-        <h5>SMK Kristen Immanuel</h5>
+    <header style="text-align: center; padding: 80px; font-family: 'Lato', sans-serif;">
+        <h1 style="color: #04AA6D; font-size: 32px;">Belajar HTML dan CSS</h1>
+        <h5 style="font-size: 18px;">SMK Kristen Immanuel</h5>
     </header>
-    <section>
-        <div>
-            <h1>HTML <i class="fa fa-html5" aria-hidden="true"></i></h1>
-            <h5>The language for building website</h5>
-            <a href="#">Belajar HTML</a>
+    <section style="margin: 16px 0; padding: 80px 0; background-color: #2B2A35; color: white; ">
+        <div style="float: left; width: 50%; text-align: center;">
+            <h1 style="font-size: 100px;">HTML <i class="fa fa-html5" aria-hidden="true"></i></h1>
+            <h5 style="font-size: 20px; margin-bottom: ;">The language for building website</h5>
+            <a href="#" style="border: none; padding: 8px 16px; overflow: hidden; text-decoration: none; text-align: center; cursor: pointer; white-space: nowrap; 
+            background-color: #04AA6D; color: white; font-size: 18px; margin: auto; display: block; width: 200px; font-weight: 700; margin-bottom: 20px; 
+            border-radius: 25px;">Belajar HTML</a>
             <br />
-            <a href="#">HTML Reference</a>
+            <a href="#" style="border: none; padding: 8px 16px; overflow: hidden; text-decoration: none; text-align: center; cursor: pointer; white-space: nowrap; 
+            background-color: white; color: black; font-size: 18px; margin: auto; display: block; width: 200px; font-weight: 700; margin-bottom: 20px; 
+            border-radius: 25px;">HTML Reference</a>
         
         </div>
-        <div>
+        <div style="float: left; width: 50%; text-align: center;">
             <img src="https://images.pexels.com/photos/1036841/pexels-photo-1036841.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="">
         </div>
         
