--- a/latihan1.html
+++ b/latihan1.html
@@ -36,7 +36,7 @@
     <section style="margin: 16px 0; padding: 80px 0; background-color: #2B2A35; color: white; ">
         <div style="float: left; width: 50%; text-align: center;">
             <h1 style="font-size: 100px;">HTML <i class="fa fa-html5" aria-hidden="true"></i></h1>
-            <h5 style="font-size: 20px; margin-bottom: ;">The language for building website</h5>
+            <h5 style="font-size: 20px; margin-bottom: 30px;">The language for building website</h5>
             <a href="#" style="border: none; padding: 8px 16px; overflow: hidden; text-decoration: none; text-align: center; cursor: pointer; white-space: nowrap; 
             background-color: #04AA6D; color: white; font-size: 18px; margin: auto; display: block; width: 200px; font-weight: 700; margin-bottom: 20px; 
             border-radius: 25px;">Belajar HTML</a>
