--- a/Latihan-3_responsiveFooter/index.html
+++ b/Latihan-3_responsiveFooter/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Footer</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 </head>
 <body>
@@ -13,7 +14,63 @@
             <div class="top">
                 <div class="logo-details">
                     <i class="fab fa-slack"></i>
+                    <span class="logo_name">StudyingCode</span>
                 </div>
+                <div class="media-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+
+            <div class="link-boxes">
+                <ul class="box">
+                    <li class="link_name">Company</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Getting Started</a></li>
+                </ul>
+
+                <ul class="box">
+                    <li class="link_name">Services</li>
+                    <li><a href="#">App Design</a></li>
+                    <li><a href="#">Web Design</a></li>
+                    <li><a href="#">Logo Design</a></li>
+                    <li><a href="#">Banner Design</a></li>
+                </ul>
+                <ul class="box">
+                    <li class="link_name">Account</li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">My Account</a></li>
+                    <li><a href="#">Preferences</a></li>
+                    <li><a href="#">Purchase</a></li>
+                </ul>
+                <ul class="box">
+                    <li class="link_name">Courses</li>
+                    <li><a href="#">HTML & CSS</a></li>
+                    <li><a href="#">JavaScript</a></li>
+                    <li><a href="#">Photography</a></li>
+                    <li><a href="#">Photoshop</a></li>
+                </ul>
+                <ul class="box input-box">
+                    <li class="link_name">Submit Validation</li>
+                    <li><input type="text" placeholder="Enter Your Email"></li>
+                    <li><input type="button" value="Submit"></li>
+                </ul>
+
+            </div>
+        </div>
+
+        <div class="bottom-details">
+            <div class="bottom_text">
+                <span class="copyright_text">Copyright &#169; 2021 <a href="#">StudyingCode.</a>All rights Reserved</span>
+                <span class="policy_terms">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms & Condition</a>
+                </span>
             </div>
         </div>
     </footer>
